// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the config correctly config with a 1-byte column 1`] = `
<div
  className="hexviewerconfigeditor"
>
  <div>
    <div
      className="hv-form-row"
    >
      <label
        htmlFor="linewidth-id-3"
      >
        Line Width: 
      </label>
      <select
        id="linewidth-id-3"
        onChange={[Function]}
        value={1}
      >
        <option
          value={1}
        >
          1
        </option>
        <option
          value={2}
        >
          2
        </option>
        <option
          value={3}
        >
          3
        </option>
        <option
          value={4}
        >
          4
        </option>
        <option
          value={5}
        >
          5
        </option>
        <option
          value={6}
        >
          6
        </option>
        <option
          value={7}
        >
          7
        </option>
        <option
          value={8}
        >
          8
        </option>
        <option
          value={9}
        >
          9
        </option>
        <option
          value={10}
        >
          10
        </option>
        <option
          value={11}
        >
          11
        </option>
        <option
          value={12}
        >
          12
        </option>
        <option
          value={13}
        >
          13
        </option>
        <option
          value={14}
        >
          14
        </option>
        <option
          value={15}
        >
          15
        </option>
        <option
          value={16}
        >
          16
        </option>
        <option
          value={17}
        >
          17
        </option>
        <option
          value={18}
        >
          18
        </option>
        <option
          value={19}
        >
          19
        </option>
        <option
          value={20}
        >
          20
        </option>
        <option
          value={21}
        >
          21
        </option>
        <option
          value={22}
        >
          22
        </option>
        <option
          value={23}
        >
          23
        </option>
        <option
          value={24}
        >
          24
        </option>
        <option
          value={25}
        >
          25
        </option>
        <option
          value={26}
        >
          26
        </option>
        <option
          value={27}
        >
          27
        </option>
        <option
          value={28}
        >
          28
        </option>
        <option
          value={29}
        >
          29
        </option>
        <option
          value={30}
        >
          30
        </option>
        <option
          value={31}
        >
          31
        </option>
        <option
          value={32}
        >
          32
        </option>
        <option
          value={33}
        >
          33
        </option>
        <option
          value={34}
        >
          34
        </option>
        <option
          value={35}
        >
          35
        </option>
        <option
          value={36}
        >
          36
        </option>
        <option
          value={37}
        >
          37
        </option>
        <option
          value={38}
        >
          38
        </option>
        <option
          value={39}
        >
          39
        </option>
        <option
          value={40}
        >
          40
        </option>
        <option
          value={41}
        >
          41
        </option>
        <option
          value={42}
        >
          42
        </option>
        <option
          value={43}
        >
          43
        </option>
        <option
          value={44}
        >
          44
        </option>
        <option
          value={45}
        >
          45
        </option>
        <option
          value={46}
        >
          46
        </option>
        <option
          value={47}
        >
          47
        </option>
        <option
          value={48}
        >
          48
        </option>
        <option
          value={49}
        >
          49
        </option>
        <option
          value={50}
        >
          50
        </option>
        <option
          value={51}
        >
          51
        </option>
        <option
          value={52}
        >
          52
        </option>
        <option
          value={53}
        >
          53
        </option>
        <option
          value={54}
        >
          54
        </option>
        <option
          value={55}
        >
          55
        </option>
        <option
          value={56}
        >
          56
        </option>
        <option
          value={57}
        >
          57
        </option>
        <option
          value={58}
        >
          58
        </option>
        <option
          value={59}
        >
          59
        </option>
        <option
          value={60}
        >
          60
        </option>
        <option
          value={61}
        >
          61
        </option>
        <option
          value={62}
        >
          62
        </option>
        <option
          value={63}
        >
          63
        </option>
        <option
          value={64}
        >
          64
        </option>
        <option
          value={65}
        >
          65
        </option>
        <option
          value={66}
        >
          66
        </option>
        <option
          value={67}
        >
          67
        </option>
        <option
          value={68}
        >
          68
        </option>
        <option
          value={69}
        >
          69
        </option>
        <option
          value={70}
        >
          70
        </option>
        <option
          value={71}
        >
          71
        </option>
        <option
          value={72}
        >
          72
        </option>
        <option
          value={73}
        >
          73
        </option>
        <option
          value={74}
        >
          74
        </option>
        <option
          value={75}
        >
          75
        </option>
        <option
          value={76}
        >
          76
        </option>
        <option
          value={77}
        >
          77
        </option>
        <option
          value={78}
        >
          78
        </option>
        <option
          value={79}
        >
          79
        </option>
        <option
          value={80}
        >
          80
        </option>
        <option
          value={81}
        >
          81
        </option>
        <option
          value={82}
        >
          82
        </option>
        <option
          value={83}
        >
          83
        </option>
        <option
          value={84}
        >
          84
        </option>
        <option
          value={85}
        >
          85
        </option>
        <option
          value={86}
        >
          86
        </option>
        <option
          value={87}
        >
          87
        </option>
        <option
          value={88}
        >
          88
        </option>
        <option
          value={89}
        >
          89
        </option>
        <option
          value={90}
        >
          90
        </option>
        <option
          value={91}
        >
          91
        </option>
        <option
          value={92}
        >
          92
        </option>
        <option
          value={93}
        >
          93
        </option>
        <option
          value={94}
        >
          94
        </option>
        <option
          value={95}
        >
          95
        </option>
        <option
          value={96}
        >
          96
        </option>
        <option
          value={97}
        >
          97
        </option>
        <option
          value={98}
        >
          98
        </option>
        <option
          value={99}
        >
          99
        </option>
        <option
          value={100}
        >
          100
        </option>
        <option
          value={101}
        >
          101
        </option>
        <option
          value={102}
        >
          102
        </option>
        <option
          value={103}
        >
          103
        </option>
        <option
          value={104}
        >
          104
        </option>
        <option
          value={105}
        >
          105
        </option>
        <option
          value={106}
        >
          106
        </option>
        <option
          value={107}
        >
          107
        </option>
        <option
          value={108}
        >
          108
        </option>
        <option
          value={109}
        >
          109
        </option>
        <option
          value={110}
        >
          110
        </option>
        <option
          value={111}
        >
          111
        </option>
        <option
          value={112}
        >
          112
        </option>
        <option
          value={113}
        >
          113
        </option>
        <option
          value={114}
        >
          114
        </option>
        <option
          value={115}
        >
          115
        </option>
        <option
          value={116}
        >
          116
        </option>
        <option
          value={117}
        >
          117
        </option>
        <option
          value={118}
        >
          118
        </option>
        <option
          value={119}
        >
          119
        </option>
        <option
          value={120}
        >
          120
        </option>
        <option
          value={121}
        >
          121
        </option>
        <option
          value={122}
        >
          122
        </option>
        <option
          value={123}
        >
          123
        </option>
        <option
          value={124}
        >
          124
        </option>
        <option
          value={125}
        >
          125
        </option>
        <option
          value={126}
        >
          126
        </option>
        <option
          value={127}
        >
          127
        </option>
        <option
          value={128}
        >
          128
        </option>
      </select>
    </div>
  </div>
  <div
    className="hv-renderer-list"
  >
    <div
      aria-labelledby="id-3-0-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-3-0-caption"
        >
          1-byte Hex
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      >
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-3-0-width"
          >
            Width
          </label>
          <div
            aria-labelledby="id-3-0-width"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-3-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={1}
              />
              1
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={2}
              />
              2
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={4}
              />
              4
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={8}
              />
              8
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-3-0-base"
          >
            Base
          </label>
          <div
            aria-labelledby="id-3-0-base"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={2}
              />
              2
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={8}
              />
              8
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={10}
              />
              10
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-3-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={16}
              />
              16
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-3-0-endianess"
          >
            Endianess
          </label>
          <div
            aria-labelledby="id-3-0-endianess"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-3-0-endianess"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Little
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-endianess"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              Big
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-3-0-sign"
          >
            Sign
          </label>
          <div
            aria-labelledby="id-3-0-sign"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-sign"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Signed
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-3-0-sign"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              Unsigned
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-3-0-fw"
          >
            Fixed width
          </label>
          <div
            aria-labelledby="id-3-0-fw"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-3-0-fw"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Yes
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-3-0-fw"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              No
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="hv-add-renderer"
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-primary btn-block btn-sm"
        disabled={false}
        id="dropdown-id-3"
        onClick={[Function]}
        type="button"
      >
        Add column
      </button>
    </div>
  </div>
</div>
`;

exports[`displays the config correctly config with a 8-byte column 1`] = `
<div
  className="hexviewerconfigeditor"
>
  <div>
    <div
      className="hv-form-row"
    >
      <label
        htmlFor="linewidth-id-4"
      >
        Line Width: 
      </label>
      <select
        id="linewidth-id-4"
        onChange={[Function]}
        value={1}
      >
        <option
          value={8}
        >
          8
        </option>
        <option
          value={16}
        >
          16
        </option>
        <option
          value={24}
        >
          24
        </option>
        <option
          value={32}
        >
          32
        </option>
        <option
          value={40}
        >
          40
        </option>
        <option
          value={48}
        >
          48
        </option>
        <option
          value={56}
        >
          56
        </option>
        <option
          value={64}
        >
          64
        </option>
        <option
          value={72}
        >
          72
        </option>
        <option
          value={80}
        >
          80
        </option>
        <option
          value={88}
        >
          88
        </option>
        <option
          value={96}
        >
          96
        </option>
        <option
          value={104}
        >
          104
        </option>
        <option
          value={112}
        >
          112
        </option>
        <option
          value={120}
        >
          120
        </option>
        <option
          value={128}
        >
          128
        </option>
      </select>
    </div>
  </div>
  <div
    className="hv-renderer-list"
  >
    <div
      aria-labelledby="id-4-0-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-4-0-caption"
        >
          8-byte Hex
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      >
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-4-0-width"
          >
            Width
          </label>
          <div
            aria-labelledby="id-4-0-width"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={1}
              />
              1
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={2}
              />
              2
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={4}
              />
              4
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-4-0-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={8}
              />
              8
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-4-0-base"
          >
            Base
          </label>
          <div
            aria-labelledby="id-4-0-base"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={2}
              />
              2
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={8}
              />
              8
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={10}
              />
              10
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-4-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={16}
              />
              16
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-4-0-endianess"
          >
            Endianess
          </label>
          <div
            aria-labelledby="id-4-0-endianess"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-4-0-endianess"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Little
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-endianess"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              Big
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-4-0-sign"
          >
            Sign
          </label>
          <div
            aria-labelledby="id-4-0-sign"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-sign"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Signed
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-4-0-sign"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              Unsigned
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-4-0-fw"
          >
            Fixed width
          </label>
          <div
            aria-labelledby="id-4-0-fw"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-4-0-fw"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Yes
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-4-0-fw"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              No
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="hv-add-renderer"
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-primary btn-block btn-sm"
        disabled={false}
        id="dropdown-id-4"
        onClick={[Function]}
        type="button"
      >
        Add column
      </button>
    </div>
  </div>
</div>
`;

exports[`displays the config correctly config with a text column 1`] = `
<div
  className="hexviewerconfigeditor"
>
  <div>
    <div
      className="hv-form-row"
    >
      <label
        htmlFor="linewidth-id-2"
      >
        Line Width: 
      </label>
      <select
        id="linewidth-id-2"
        onChange={[Function]}
        value={1}
      >
        <option
          value={1}
        >
          1
        </option>
        <option
          value={2}
        >
          2
        </option>
        <option
          value={3}
        >
          3
        </option>
        <option
          value={4}
        >
          4
        </option>
        <option
          value={5}
        >
          5
        </option>
        <option
          value={6}
        >
          6
        </option>
        <option
          value={7}
        >
          7
        </option>
        <option
          value={8}
        >
          8
        </option>
        <option
          value={9}
        >
          9
        </option>
        <option
          value={10}
        >
          10
        </option>
        <option
          value={11}
        >
          11
        </option>
        <option
          value={12}
        >
          12
        </option>
        <option
          value={13}
        >
          13
        </option>
        <option
          value={14}
        >
          14
        </option>
        <option
          value={15}
        >
          15
        </option>
        <option
          value={16}
        >
          16
        </option>
        <option
          value={17}
        >
          17
        </option>
        <option
          value={18}
        >
          18
        </option>
        <option
          value={19}
        >
          19
        </option>
        <option
          value={20}
        >
          20
        </option>
        <option
          value={21}
        >
          21
        </option>
        <option
          value={22}
        >
          22
        </option>
        <option
          value={23}
        >
          23
        </option>
        <option
          value={24}
        >
          24
        </option>
        <option
          value={25}
        >
          25
        </option>
        <option
          value={26}
        >
          26
        </option>
        <option
          value={27}
        >
          27
        </option>
        <option
          value={28}
        >
          28
        </option>
        <option
          value={29}
        >
          29
        </option>
        <option
          value={30}
        >
          30
        </option>
        <option
          value={31}
        >
          31
        </option>
        <option
          value={32}
        >
          32
        </option>
        <option
          value={33}
        >
          33
        </option>
        <option
          value={34}
        >
          34
        </option>
        <option
          value={35}
        >
          35
        </option>
        <option
          value={36}
        >
          36
        </option>
        <option
          value={37}
        >
          37
        </option>
        <option
          value={38}
        >
          38
        </option>
        <option
          value={39}
        >
          39
        </option>
        <option
          value={40}
        >
          40
        </option>
        <option
          value={41}
        >
          41
        </option>
        <option
          value={42}
        >
          42
        </option>
        <option
          value={43}
        >
          43
        </option>
        <option
          value={44}
        >
          44
        </option>
        <option
          value={45}
        >
          45
        </option>
        <option
          value={46}
        >
          46
        </option>
        <option
          value={47}
        >
          47
        </option>
        <option
          value={48}
        >
          48
        </option>
        <option
          value={49}
        >
          49
        </option>
        <option
          value={50}
        >
          50
        </option>
        <option
          value={51}
        >
          51
        </option>
        <option
          value={52}
        >
          52
        </option>
        <option
          value={53}
        >
          53
        </option>
        <option
          value={54}
        >
          54
        </option>
        <option
          value={55}
        >
          55
        </option>
        <option
          value={56}
        >
          56
        </option>
        <option
          value={57}
        >
          57
        </option>
        <option
          value={58}
        >
          58
        </option>
        <option
          value={59}
        >
          59
        </option>
        <option
          value={60}
        >
          60
        </option>
        <option
          value={61}
        >
          61
        </option>
        <option
          value={62}
        >
          62
        </option>
        <option
          value={63}
        >
          63
        </option>
        <option
          value={64}
        >
          64
        </option>
        <option
          value={65}
        >
          65
        </option>
        <option
          value={66}
        >
          66
        </option>
        <option
          value={67}
        >
          67
        </option>
        <option
          value={68}
        >
          68
        </option>
        <option
          value={69}
        >
          69
        </option>
        <option
          value={70}
        >
          70
        </option>
        <option
          value={71}
        >
          71
        </option>
        <option
          value={72}
        >
          72
        </option>
        <option
          value={73}
        >
          73
        </option>
        <option
          value={74}
        >
          74
        </option>
        <option
          value={75}
        >
          75
        </option>
        <option
          value={76}
        >
          76
        </option>
        <option
          value={77}
        >
          77
        </option>
        <option
          value={78}
        >
          78
        </option>
        <option
          value={79}
        >
          79
        </option>
        <option
          value={80}
        >
          80
        </option>
        <option
          value={81}
        >
          81
        </option>
        <option
          value={82}
        >
          82
        </option>
        <option
          value={83}
        >
          83
        </option>
        <option
          value={84}
        >
          84
        </option>
        <option
          value={85}
        >
          85
        </option>
        <option
          value={86}
        >
          86
        </option>
        <option
          value={87}
        >
          87
        </option>
        <option
          value={88}
        >
          88
        </option>
        <option
          value={89}
        >
          89
        </option>
        <option
          value={90}
        >
          90
        </option>
        <option
          value={91}
        >
          91
        </option>
        <option
          value={92}
        >
          92
        </option>
        <option
          value={93}
        >
          93
        </option>
        <option
          value={94}
        >
          94
        </option>
        <option
          value={95}
        >
          95
        </option>
        <option
          value={96}
        >
          96
        </option>
        <option
          value={97}
        >
          97
        </option>
        <option
          value={98}
        >
          98
        </option>
        <option
          value={99}
        >
          99
        </option>
        <option
          value={100}
        >
          100
        </option>
        <option
          value={101}
        >
          101
        </option>
        <option
          value={102}
        >
          102
        </option>
        <option
          value={103}
        >
          103
        </option>
        <option
          value={104}
        >
          104
        </option>
        <option
          value={105}
        >
          105
        </option>
        <option
          value={106}
        >
          106
        </option>
        <option
          value={107}
        >
          107
        </option>
        <option
          value={108}
        >
          108
        </option>
        <option
          value={109}
        >
          109
        </option>
        <option
          value={110}
        >
          110
        </option>
        <option
          value={111}
        >
          111
        </option>
        <option
          value={112}
        >
          112
        </option>
        <option
          value={113}
        >
          113
        </option>
        <option
          value={114}
        >
          114
        </option>
        <option
          value={115}
        >
          115
        </option>
        <option
          value={116}
        >
          116
        </option>
        <option
          value={117}
        >
          117
        </option>
        <option
          value={118}
        >
          118
        </option>
        <option
          value={119}
        >
          119
        </option>
        <option
          value={120}
        >
          120
        </option>
        <option
          value={121}
        >
          121
        </option>
        <option
          value={122}
        >
          122
        </option>
        <option
          value={123}
        >
          123
        </option>
        <option
          value={124}
        >
          124
        </option>
        <option
          value={125}
        >
          125
        </option>
        <option
          value={126}
        >
          126
        </option>
        <option
          value={127}
        >
          127
        </option>
        <option
          value={128}
        >
          128
        </option>
      </select>
    </div>
  </div>
  <div
    className="hv-renderer-list"
  >
    <div
      aria-labelledby="id-2-0-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-2-0-caption"
        >
          ASCII
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      />
    </div>
  </div>
  <div
    className="hv-add-renderer"
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-primary btn-block btn-sm"
        disabled={false}
        id="dropdown-id-2"
        onClick={[Function]}
        type="button"
      >
        Add column
      </button>
    </div>
  </div>
</div>
`;

exports[`displays the config correctly config with an address column 1`] = `
<div
  className="hexviewerconfigeditor"
>
  <div>
    <div
      className="hv-form-row"
    >
      <label
        htmlFor="linewidth-id-1"
      >
        Line Width: 
      </label>
      <select
        id="linewidth-id-1"
        onChange={[Function]}
        value={1}
      >
        <option
          value={1}
        >
          1
        </option>
        <option
          value={2}
        >
          2
        </option>
        <option
          value={3}
        >
          3
        </option>
        <option
          value={4}
        >
          4
        </option>
        <option
          value={5}
        >
          5
        </option>
        <option
          value={6}
        >
          6
        </option>
        <option
          value={7}
        >
          7
        </option>
        <option
          value={8}
        >
          8
        </option>
        <option
          value={9}
        >
          9
        </option>
        <option
          value={10}
        >
          10
        </option>
        <option
          value={11}
        >
          11
        </option>
        <option
          value={12}
        >
          12
        </option>
        <option
          value={13}
        >
          13
        </option>
        <option
          value={14}
        >
          14
        </option>
        <option
          value={15}
        >
          15
        </option>
        <option
          value={16}
        >
          16
        </option>
        <option
          value={17}
        >
          17
        </option>
        <option
          value={18}
        >
          18
        </option>
        <option
          value={19}
        >
          19
        </option>
        <option
          value={20}
        >
          20
        </option>
        <option
          value={21}
        >
          21
        </option>
        <option
          value={22}
        >
          22
        </option>
        <option
          value={23}
        >
          23
        </option>
        <option
          value={24}
        >
          24
        </option>
        <option
          value={25}
        >
          25
        </option>
        <option
          value={26}
        >
          26
        </option>
        <option
          value={27}
        >
          27
        </option>
        <option
          value={28}
        >
          28
        </option>
        <option
          value={29}
        >
          29
        </option>
        <option
          value={30}
        >
          30
        </option>
        <option
          value={31}
        >
          31
        </option>
        <option
          value={32}
        >
          32
        </option>
        <option
          value={33}
        >
          33
        </option>
        <option
          value={34}
        >
          34
        </option>
        <option
          value={35}
        >
          35
        </option>
        <option
          value={36}
        >
          36
        </option>
        <option
          value={37}
        >
          37
        </option>
        <option
          value={38}
        >
          38
        </option>
        <option
          value={39}
        >
          39
        </option>
        <option
          value={40}
        >
          40
        </option>
        <option
          value={41}
        >
          41
        </option>
        <option
          value={42}
        >
          42
        </option>
        <option
          value={43}
        >
          43
        </option>
        <option
          value={44}
        >
          44
        </option>
        <option
          value={45}
        >
          45
        </option>
        <option
          value={46}
        >
          46
        </option>
        <option
          value={47}
        >
          47
        </option>
        <option
          value={48}
        >
          48
        </option>
        <option
          value={49}
        >
          49
        </option>
        <option
          value={50}
        >
          50
        </option>
        <option
          value={51}
        >
          51
        </option>
        <option
          value={52}
        >
          52
        </option>
        <option
          value={53}
        >
          53
        </option>
        <option
          value={54}
        >
          54
        </option>
        <option
          value={55}
        >
          55
        </option>
        <option
          value={56}
        >
          56
        </option>
        <option
          value={57}
        >
          57
        </option>
        <option
          value={58}
        >
          58
        </option>
        <option
          value={59}
        >
          59
        </option>
        <option
          value={60}
        >
          60
        </option>
        <option
          value={61}
        >
          61
        </option>
        <option
          value={62}
        >
          62
        </option>
        <option
          value={63}
        >
          63
        </option>
        <option
          value={64}
        >
          64
        </option>
        <option
          value={65}
        >
          65
        </option>
        <option
          value={66}
        >
          66
        </option>
        <option
          value={67}
        >
          67
        </option>
        <option
          value={68}
        >
          68
        </option>
        <option
          value={69}
        >
          69
        </option>
        <option
          value={70}
        >
          70
        </option>
        <option
          value={71}
        >
          71
        </option>
        <option
          value={72}
        >
          72
        </option>
        <option
          value={73}
        >
          73
        </option>
        <option
          value={74}
        >
          74
        </option>
        <option
          value={75}
        >
          75
        </option>
        <option
          value={76}
        >
          76
        </option>
        <option
          value={77}
        >
          77
        </option>
        <option
          value={78}
        >
          78
        </option>
        <option
          value={79}
        >
          79
        </option>
        <option
          value={80}
        >
          80
        </option>
        <option
          value={81}
        >
          81
        </option>
        <option
          value={82}
        >
          82
        </option>
        <option
          value={83}
        >
          83
        </option>
        <option
          value={84}
        >
          84
        </option>
        <option
          value={85}
        >
          85
        </option>
        <option
          value={86}
        >
          86
        </option>
        <option
          value={87}
        >
          87
        </option>
        <option
          value={88}
        >
          88
        </option>
        <option
          value={89}
        >
          89
        </option>
        <option
          value={90}
        >
          90
        </option>
        <option
          value={91}
        >
          91
        </option>
        <option
          value={92}
        >
          92
        </option>
        <option
          value={93}
        >
          93
        </option>
        <option
          value={94}
        >
          94
        </option>
        <option
          value={95}
        >
          95
        </option>
        <option
          value={96}
        >
          96
        </option>
        <option
          value={97}
        >
          97
        </option>
        <option
          value={98}
        >
          98
        </option>
        <option
          value={99}
        >
          99
        </option>
        <option
          value={100}
        >
          100
        </option>
        <option
          value={101}
        >
          101
        </option>
        <option
          value={102}
        >
          102
        </option>
        <option
          value={103}
        >
          103
        </option>
        <option
          value={104}
        >
          104
        </option>
        <option
          value={105}
        >
          105
        </option>
        <option
          value={106}
        >
          106
        </option>
        <option
          value={107}
        >
          107
        </option>
        <option
          value={108}
        >
          108
        </option>
        <option
          value={109}
        >
          109
        </option>
        <option
          value={110}
        >
          110
        </option>
        <option
          value={111}
        >
          111
        </option>
        <option
          value={112}
        >
          112
        </option>
        <option
          value={113}
        >
          113
        </option>
        <option
          value={114}
        >
          114
        </option>
        <option
          value={115}
        >
          115
        </option>
        <option
          value={116}
        >
          116
        </option>
        <option
          value={117}
        >
          117
        </option>
        <option
          value={118}
        >
          118
        </option>
        <option
          value={119}
        >
          119
        </option>
        <option
          value={120}
        >
          120
        </option>
        <option
          value={121}
        >
          121
        </option>
        <option
          value={122}
        >
          122
        </option>
        <option
          value={123}
        >
          123
        </option>
        <option
          value={124}
        >
          124
        </option>
        <option
          value={125}
        >
          125
        </option>
        <option
          value={126}
        >
          126
        </option>
        <option
          value={127}
        >
          127
        </option>
        <option
          value={128}
        >
          128
        </option>
      </select>
    </div>
  </div>
  <div
    className="hv-renderer-list"
  >
    <div
      aria-labelledby="id-1-0-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-1-0-caption"
        >
          Address
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      >
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-1-0-base"
          >
            Base
          </label>
          <div
            aria-labelledby="id-1-0-base"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-1-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={10}
              />
              10
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-1-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={16}
              />
              16
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="hv-add-renderer"
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-primary btn-block btn-sm"
        disabled={false}
        id="dropdown-id-1"
        onClick={[Function]}
        type="button"
      >
        Add column
      </button>
    </div>
  </div>
</div>
`;

exports[`displays the config correctly the default config 1`] = `
<div
  className="hexviewerconfigeditor"
>
  <div>
    <div
      className="hv-form-row"
    >
      <label
        htmlFor="linewidth-id-5"
      >
        Line Width: 
      </label>
      <select
        id="linewidth-id-5"
        onChange={[Function]}
        value={16}
      >
        <option
          value={1}
        >
          1
        </option>
        <option
          value={2}
        >
          2
        </option>
        <option
          value={3}
        >
          3
        </option>
        <option
          value={4}
        >
          4
        </option>
        <option
          value={5}
        >
          5
        </option>
        <option
          value={6}
        >
          6
        </option>
        <option
          value={7}
        >
          7
        </option>
        <option
          value={8}
        >
          8
        </option>
        <option
          value={9}
        >
          9
        </option>
        <option
          value={10}
        >
          10
        </option>
        <option
          value={11}
        >
          11
        </option>
        <option
          value={12}
        >
          12
        </option>
        <option
          value={13}
        >
          13
        </option>
        <option
          value={14}
        >
          14
        </option>
        <option
          value={15}
        >
          15
        </option>
        <option
          value={16}
        >
          16
        </option>
        <option
          value={17}
        >
          17
        </option>
        <option
          value={18}
        >
          18
        </option>
        <option
          value={19}
        >
          19
        </option>
        <option
          value={20}
        >
          20
        </option>
        <option
          value={21}
        >
          21
        </option>
        <option
          value={22}
        >
          22
        </option>
        <option
          value={23}
        >
          23
        </option>
        <option
          value={24}
        >
          24
        </option>
        <option
          value={25}
        >
          25
        </option>
        <option
          value={26}
        >
          26
        </option>
        <option
          value={27}
        >
          27
        </option>
        <option
          value={28}
        >
          28
        </option>
        <option
          value={29}
        >
          29
        </option>
        <option
          value={30}
        >
          30
        </option>
        <option
          value={31}
        >
          31
        </option>
        <option
          value={32}
        >
          32
        </option>
        <option
          value={33}
        >
          33
        </option>
        <option
          value={34}
        >
          34
        </option>
        <option
          value={35}
        >
          35
        </option>
        <option
          value={36}
        >
          36
        </option>
        <option
          value={37}
        >
          37
        </option>
        <option
          value={38}
        >
          38
        </option>
        <option
          value={39}
        >
          39
        </option>
        <option
          value={40}
        >
          40
        </option>
        <option
          value={41}
        >
          41
        </option>
        <option
          value={42}
        >
          42
        </option>
        <option
          value={43}
        >
          43
        </option>
        <option
          value={44}
        >
          44
        </option>
        <option
          value={45}
        >
          45
        </option>
        <option
          value={46}
        >
          46
        </option>
        <option
          value={47}
        >
          47
        </option>
        <option
          value={48}
        >
          48
        </option>
        <option
          value={49}
        >
          49
        </option>
        <option
          value={50}
        >
          50
        </option>
        <option
          value={51}
        >
          51
        </option>
        <option
          value={52}
        >
          52
        </option>
        <option
          value={53}
        >
          53
        </option>
        <option
          value={54}
        >
          54
        </option>
        <option
          value={55}
        >
          55
        </option>
        <option
          value={56}
        >
          56
        </option>
        <option
          value={57}
        >
          57
        </option>
        <option
          value={58}
        >
          58
        </option>
        <option
          value={59}
        >
          59
        </option>
        <option
          value={60}
        >
          60
        </option>
        <option
          value={61}
        >
          61
        </option>
        <option
          value={62}
        >
          62
        </option>
        <option
          value={63}
        >
          63
        </option>
        <option
          value={64}
        >
          64
        </option>
        <option
          value={65}
        >
          65
        </option>
        <option
          value={66}
        >
          66
        </option>
        <option
          value={67}
        >
          67
        </option>
        <option
          value={68}
        >
          68
        </option>
        <option
          value={69}
        >
          69
        </option>
        <option
          value={70}
        >
          70
        </option>
        <option
          value={71}
        >
          71
        </option>
        <option
          value={72}
        >
          72
        </option>
        <option
          value={73}
        >
          73
        </option>
        <option
          value={74}
        >
          74
        </option>
        <option
          value={75}
        >
          75
        </option>
        <option
          value={76}
        >
          76
        </option>
        <option
          value={77}
        >
          77
        </option>
        <option
          value={78}
        >
          78
        </option>
        <option
          value={79}
        >
          79
        </option>
        <option
          value={80}
        >
          80
        </option>
        <option
          value={81}
        >
          81
        </option>
        <option
          value={82}
        >
          82
        </option>
        <option
          value={83}
        >
          83
        </option>
        <option
          value={84}
        >
          84
        </option>
        <option
          value={85}
        >
          85
        </option>
        <option
          value={86}
        >
          86
        </option>
        <option
          value={87}
        >
          87
        </option>
        <option
          value={88}
        >
          88
        </option>
        <option
          value={89}
        >
          89
        </option>
        <option
          value={90}
        >
          90
        </option>
        <option
          value={91}
        >
          91
        </option>
        <option
          value={92}
        >
          92
        </option>
        <option
          value={93}
        >
          93
        </option>
        <option
          value={94}
        >
          94
        </option>
        <option
          value={95}
        >
          95
        </option>
        <option
          value={96}
        >
          96
        </option>
        <option
          value={97}
        >
          97
        </option>
        <option
          value={98}
        >
          98
        </option>
        <option
          value={99}
        >
          99
        </option>
        <option
          value={100}
        >
          100
        </option>
        <option
          value={101}
        >
          101
        </option>
        <option
          value={102}
        >
          102
        </option>
        <option
          value={103}
        >
          103
        </option>
        <option
          value={104}
        >
          104
        </option>
        <option
          value={105}
        >
          105
        </option>
        <option
          value={106}
        >
          106
        </option>
        <option
          value={107}
        >
          107
        </option>
        <option
          value={108}
        >
          108
        </option>
        <option
          value={109}
        >
          109
        </option>
        <option
          value={110}
        >
          110
        </option>
        <option
          value={111}
        >
          111
        </option>
        <option
          value={112}
        >
          112
        </option>
        <option
          value={113}
        >
          113
        </option>
        <option
          value={114}
        >
          114
        </option>
        <option
          value={115}
        >
          115
        </option>
        <option
          value={116}
        >
          116
        </option>
        <option
          value={117}
        >
          117
        </option>
        <option
          value={118}
        >
          118
        </option>
        <option
          value={119}
        >
          119
        </option>
        <option
          value={120}
        >
          120
        </option>
        <option
          value={121}
        >
          121
        </option>
        <option
          value={122}
        >
          122
        </option>
        <option
          value={123}
        >
          123
        </option>
        <option
          value={124}
        >
          124
        </option>
        <option
          value={125}
        >
          125
        </option>
        <option
          value={126}
        >
          126
        </option>
        <option
          value={127}
        >
          127
        </option>
        <option
          value={128}
        >
          128
        </option>
      </select>
    </div>
  </div>
  <div
    className="hv-renderer-list"
  >
    <div
      aria-labelledby="id-5-0-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-5-0-caption"
        >
          Address
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      >
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-5-0-base"
          >
            Base
          </label>
          <div
            aria-labelledby="id-5-0-base"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={10}
              />
              10
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-5-0-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={16}
              />
              16
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="id-5-1-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-5-1-caption"
        >
          1-byte Hex
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      >
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-5-1-width"
          >
            Width
          </label>
          <div
            aria-labelledby="id-5-1-width"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-5-1-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={1}
              />
              1
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={2}
              />
              2
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={4}
              />
              4
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-width"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={8}
              />
              8
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-5-1-base"
          >
            Base
          </label>
          <div
            aria-labelledby="id-5-1-base"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={2}
              />
              2
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={8}
              />
              8
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={10}
              />
              10
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-5-1-base"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={16}
              />
              16
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-5-1-endianess"
          >
            Endianess
          </label>
          <div
            aria-labelledby="id-5-1-endianess"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-5-1-endianess"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Little
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-endianess"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              Big
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-5-1-sign"
          >
            Sign
          </label>
          <div
            aria-labelledby="id-5-1-sign"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-sign"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Signed
            </label>
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-5-1-sign"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              Unsigned
            </label>
          </div>
        </div>
        <div
          className="hv-form-row"
        >
          <label
            className="form-label"
            id="id-5-1-fw"
          >
            Fixed width
          </label>
          <div
            aria-labelledby="id-5-1-fw"
            className="btn-group btn-group-sm btn-group-toggle"
            role="group"
          >
            <label
              className="btn active btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={true}
                disabled={false}
                name="id-5-1-fw"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={true}
              />
              Yes
            </label>
            <label
              className="btn btn-primary"
              disabled={false}
            >
              <input
                autoComplete="off"
                checked={false}
                disabled={false}
                name="id-5-1-fw"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
                value={false}
              />
              No
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="id-5-2-caption"
      role="group"
    >
      <div
        className="hv-form-row"
      >
        <span
          id="id-5-2-caption"
        >
          ASCII
        </span>
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Move up"
            type="button"
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-secondary btn-sm"
            disabled={true}
            onClick={[Function]}
            title="Move down"
            type="button"
          >
            ⮟
          </button>
          <button
            className="btn btn-outline-danger btn-sm"
            disabled={false}
            onClick={[Function]}
            title="Remove"
            type="button"
          >
            X
          </button>
        </div>
      </div>
      <div
        className="hv-renderer-details"
      />
    </div>
  </div>
  <div
    className="hv-add-renderer"
  >
    <div
      className="dropdown"
      onKeyDown={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="dropdown-toggle btn btn-primary btn-block btn-sm"
        disabled={false}
        id="dropdown-id-5"
        onClick={[Function]}
        type="button"
      >
        Add column
      </button>
    </div>
  </div>
</div>
`;
